<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.taskmanager.MainActivity">



    <item
        android:id="@+id/action_menu"
        android:orderInCategory="50"
        android:title="@string/refresh"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="50"
        android:title="@string/info"
        app:showAsAction="never"
        />
<!--    <item-->
<!--        android:id="@+id/action_clearall"-->
<!--        android:orderInCategory="50"-->
<!--        android:title="@string/clear"-->
<!--        app:showAsAction="never"-->
<!--        />-->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
